all text must die

--- a/content/acronyms.tex
+++ b/content/acronyms.tex
@@ -4,6 +4,7 @@
 \newglossaryentry{AOP}{name=AOP,description={Aspect Oriented Programming}}
 \newglossaryentry{BDD}{name=BDD,description={Behaviour Driven Development}}
 \newglossaryentry{BPEL}{name=BPEL,description={Business Process Execution Language}}
+\newglossaryentry{BPMN}{name=BPMN,description={Business Process Model and Notation}}
 \newglossaryentry{BRMS}{name=BRMS,description={Business Rules Management System}}
 \newglossaryentry{CI}{name=CI,description={Continuous Integration}}
 \newglossaryentry{CIM}{name=CIM,description={Computation Independent Model}}
