--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -56,7 +56,7 @@ unicode=true,
 \usepackage{array}
 \usepackage{afterpage}
 
-\usepackage[style=long,acronym,nomain,numberedsection]{glossaries}
+\usepackage[style=long,acronym,nomain,numberedsection,nogroupskip]{glossaries}
 \makeglossaries
 
 \include{content/acronyms}
