--- a/reference.bib
+++ b/reference.bib
@@ -595,3 +595,27 @@
     year={2005},
     organization={IEEE}
 }
+
+@techreport{boyen1994generalized,
+    title={Generalized mixin-based inheritance to support multiple inheritance},
+    author={Boyen, Niels and Lucas, Carine and Steyaert, Patrick},
+    year={1994},
+    institution={Technical Report vub-prog-tr-94-12, Vrije Universiteit Brussel}
+}
+
+@article{model2011notation,
+    title={Notation (bpmn) version 2.0},
+    author={Model, Business Process},
+    journal={OMG Specification, Object Management Group},
+    pages={22--31},
+    year={2011}
+}
+
+@inproceedings{rao2004survey,
+    title={A survey of automated web service composition methods},
+    author={Rao, Jinghai and Su, Xiaomeng},
+    booktitle={International Workshop on Semantic Web Services and Web Process Composition},
+    pages={43--54},
+    year={2004},
+    organization={Springer}
+}
